--- a/Endpoint.Site/Areas/Admin/Views/Product/Index.cshtml
+++ b/Endpoint.Site/Areas/Admin/Views/Product/Index.cshtml
@@ -40,7 +40,7 @@
                                     <td>@item.Price.ToString("n0")</td>
                                     <td>@item.Inventory</td>
                                     @{
-                                        string isDisplayed = @item.IsDisplayed == true ? " بله" :"خیر" ;
+                                        string isDisplayed = @item.IsDisplayed == true ? " Yes" :"No" ;
                                     }
                                     <td>@isDisplayed</td>
                                     <td>
