--- a/Endpoint.Site/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Endpoint.Site/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -349,7 +349,8 @@
 <script src="~/Sweetalert2/sweetalert2.min.js"></script>
     <!-- ./wrapper -->
     <!-- jQuery -->
-    <script src="~/Template-Admin/plugins/jquery/jquery.min.js"></script>
+    <!-- <script src="~/Template-Admin/plugins/jquery/jquery.min.js"></script> -->
+    <script src="~/Template-Admin/plugins/jquery/jquery-3.6.0.js"></script>
     <!-- jQuery UI 1.11.4 -->
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
