--- a/Endpoint.Site/Areas/Admin/Views/User/Index.cshtml
+++ b/Endpoint.Site/Areas/Admin/Views/User/Index.cshtml
@@ -14,7 +14,7 @@
                 <form method="get" class="col-xl-4 col-lg-6 col-md-6 mb-1">
                     <fieldset class="form-group" style="display:inline-flex">
                         <input placeholder="looking for a user?" type="text" class="form-control" name="searchKey">
-                        <button class="btn btn-success" >Search</button>
+                        <button class="btn btn-success">Search</button>
                     </fieldset>
                 </form>
                 <div class="card-header">
@@ -39,29 +39,22 @@
                             {
                                 <tr>
                                     <td>@item.UserId</td>
-                                    <td>@item.UserRole</td>
+                                    <td>
+                                        @foreach (var roles in item.Roles)
+                                        {
+                                            @roles.Name <text> - </text>
+                                        }
+                                    </td>
                                     <td>@item.FullName</td>
                                     <td>@item.Email</td>
                                     <td>@item.PhoneNumber</td>
                                     <td>
-
-                                        @*<a class="btn btn-danger" id="DeleteId" href="~/admin/user/delete/@item.UserId">Delete</a>*@
                                         <button class="btn btn-danger" onclick="DeteleUser('@item.UserId')">Delete</button>
                                         <button class="btn btn-info" onclick="ShowModalEdituser('@item.UserId','@item.FullName','@item.Email','@item.PhoneNumber')">Edit</button>
                                     </td>
                                 </tr>
                             }
                         </tbody>
-                        @*  <tfoot style="background-color:#0f83ff">
-                            <tr>
-                            <th>آی دی</th>
-                            <th>نقش کاربر</th>
-                            <th>نام</th>
-                            <th>ایمیل</th>
-                            <th>شماره تلفن</th>
-                            <th> </th>
-                            </tr>
-                            </tfoot>*@
                     </table>
                 </div>
                 <!-- /.card-body -->
@@ -76,155 +69,153 @@
 
 
 @section Scripts
-   {
+    {
 
-<link href="~/Sweetalert2/sweetalert2.min.css" rel="stylesheet" />
-<script src="~/Sweetalert2/sweetalert2.min.js"></script>
-<script>
+    <link href="~/Sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+    <script src="~/Sweetalert2/sweetalert2.min.js"></script>
+    <script>
 
-    function DeteleUser(UserId){
-      swal.fire({
-          title: 'Delete User',
-          text: 'Do you want to delete this user?',
-          icon: 'warning',
-          showCancelButton: true,
-          confirmButtonColor: '#d33',
-          cancelButtonColor: '#7cacbe',
-          confirmButtonText: 'Confirm',
-          cancelButtonText: 'Cancel'
-      }).then((result) => {
-          if (result.value) {
-              var postData = {
-                  'UserId': UserId
-              };
+        function DeteleUser(UserId) {
+            swal.fire({
+                title: 'Delete User',
+                text: 'Do you want to delete this user?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#d33',
+                cancelButtonColor: '#7cacbe',
+                confirmButtonText: 'Confirm',
+                cancelButtonText: 'Cancel'
+            }).then((result) => {
+                if (result.value) {
+                    var postData = {
+                        'UserId': UserId
+                    };
 
-              $.ajax({
-                  contentType: 'application/x-www-form-urlencoded',
-                  dataType: 'json',
-                  type: "POST",
-                  url: "Delete",
-                  data: postData,
-                  success: function (data) {
-                      if(data.isSuccess == true){
-                      swal.fire(
-                          'Success',
-                          data.message,
-                          'success'
-                      ).then(function (isConfirm){
-                          location.reload();
-                      });
-                  }
-                  else{
-                      swal.fire(
-                          'Warning',
-                          data.message,
-                          'warning'
-                      );
-                   }
-                  },
-                  error: function (request, status, error){
-                      alert(request.responseText);
-                  }
-                  });
-          }
-      })
-    }
-
-
-       function Edituser() {
-
-        var userId = $("#Edit_UserId").val();
-        var fullName = $("#Edit_Fullname").val();
-        var email = $("#Edit_Email").val();
-        var phoneNumber = $("#Edit_PhoneNumber").val();
-
-    var postData = {
-    'UserId': userId,
-    'FullName': fullName,
-    'Email': email,
-    'PhoneNumber': phoneNumber,
-        };
+                    $.ajax({
+                        contentType: 'application/x-www-form-urlencoded',
+                        dataType: 'json',
+                        type: "POST",
+                        url: "Admin/User/Delete",
+                        data: postData,
+                        success: function(data) {
+                            if (data.isSuccess == true) {
+                                swal.fire(
+                                    'Success',
+                                    data.message,
+                                    'success'
+                                ).then(function(isConfirm) {
+                                    location.reload();
+                                });
+                            }
+                            else {
+                                swal.fire(
+                                    'Warning',
+                                    data.message,
+                                    'warning'
+                                );
+                            }
+                        },
+                        error: function(request, status, error) {
+                            alert(request.responseText);
+                        }
+                    });
+                }
+            })
+        }
 
 
-     $.ajax({
+        function Edituser() {
+
+            var userId = $("#Edit_UserId").val();
+            var fullName = $("#Edit_Fullname").val();
+            var email = $("#Edit_Email").val();
+            var phoneNumber = $("#Edit_PhoneNumber").val();
+
+            var postData = {
+                'UserId': userId,
+                'FullName': fullName,
+                'Email': email,
+                'PhoneNumber': phoneNumber,
+            };
+
+
+            $.ajax({
                 contentType: 'application/x-www-form-urlencoded',
                 dataType: 'json',
-                type: "POST",
-                url: "Edit",
+                method: "Post",
+                url: "Admin/User/Edit",
                 data: postData,
-                success: function (data) {
+                success: function(data) {
                     if (data.isSuccess == true) {
                         swal.fire(
-                            'موفق!',
+                            'Done!',
                             data.message,
                             'success'
-                        ).then(function (isConfirm) {
+                        ).then(function(isConfirm) {
                             location.reload();
                         });
                     }
                     else {
                         swal.fire(
-                            'هشدار!',
+                            'Failed!',
                             data.message,
                             'warning'
                         );
                     }
                 },
-                error: function (request, status, error) {
+                error: function(request, status, error) {
                     alert(request.responseText);
                 }
             });
 
-    $('#EditUser').modal('hide');
+            $('#EditUser').modal('hide');
+
+        }
+
+
+        function ShowModalEdituser(UserId, fullName, Email, PhoneNumber) {
+            $('#Edit_UserId').val(UserId)
+            $('#Edit_Fullname').val(fullName)
+            $('#Edit_Email').val(Email)
+            $('#Edit_PhoneNumber').val(PhoneNumber)
+
+            $('#EditUser').modal('show');
+        }
+
+    </script>
 
     }
 
-
-    function ShowModalEdituser(UserId, fullName,Email,PhoneNumber) {
-    $('#Edit_UserId').val(UserId)
-    $('#Edit_Fullname').val(fullName)
-    $('#Edit_Email').val(Email)
-    $('#Edit_PhoneNumber').val(PhoneNumber)
-
-    $('#EditUser').modal('show');
-    }
-
-</script>
-
-    }
-
-
-
-@section Modals
+    @section Modals
     {
-<!-- Modal Edit User -->
-<div class="modal fade" id="EditUser" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Edit User</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="col-xl-12 col-lg-12 col-md-12 mb-1">
-                    <fieldset class="form-group">
-                        <input type="hidden" id="Edit_UserId" />
-                        <label for="basicInput">Name</label>
-                        <input type="text" class="form-control" id="Edit_Fullname">
-                        <label for="basicInput">Email</label>
-                        <input type="text" class="form-control" id="Edit_Email">
-                        <label for="basicInput">PhoneNumber</label>
-                        <input type="text" class="form-control" id="Edit_PhoneNumber">
-                    </fieldset>
+    <!-- Modal Edit User -->
+    <div class="modal fade" id="EditUser" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Edit User</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <a class="btn btn-secondary" data-dismiss="modal">Cancel</a>
-                <a class="btn btn-primary" onclick="Edituser()">Confirm</a>
+                <div class="modal-body">
+                    <div class="col-xl-12 col-lg-12 col-md-12 mb-1">
+                        <fieldset class="form-group">
+                            <input type="hidden" id="Edit_UserId" />
+                            <label for="basicInput">Name</label>
+                            <input type="text" class="form-control" id="Edit_Fullname">
+                            <label for="basicInput">Email</label>
+                            <input type="text" class="form-control" id="Edit_Email">
+                            <label for="basicInput">PhoneNumber</label>
+                            <input type="text" class="form-control" id="Edit_PhoneNumber">
+                        </fieldset>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a class="btn btn-secondary" data-dismiss="modal">Cancel</a>
+                    <a class="btn btn-primary" onclick="Edituser()">Confirm</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
     }
