--- a/Endpoint.Site/Views/Product/Index.cshtml
+++ b/Endpoint.Site/Views/Product/Index.cshtml
@@ -692,7 +692,7 @@
                                         </a>
                                     </div>
                                     <div class="caption text-center">
-                                        <a href="~/product/detail?Id=@item.Id"><h4 class="caption-title">@item.Title</h4></a>
+                                        <a href="~/product/detail/@item.Id/@item.Title"><h4 class="caption-title">@item.Title</h4></a>
                                         <div class="rating">
                                             @for (int i = 1; i <= (5 - item.Star); i++)
                                             {
