--- a/Endpoint.Site/Views/Authentication/Login.cshtml
+++ b/Endpoint.Site/Views/Authentication/Login.cshtml
@@ -31,16 +31,17 @@
                                 <div class="form-group"><input id="Email" name="Email" class="form-control" type="text" placeholder="ایمیل"></div>
                             </div>
                             <div class="col-md-12">
-                                <div class="form-group"><input id="Password" name="Password" input class="form-control" type="password" placeholder="پسوورد"></div>
+                                <div class="form-group"><input id="Password" name="Password"  class="form-control" type="password" placeholder="پسوورد"></div>
                             </div>
                             <div class="col-md-12 col-lg-6">
                                 <div class="checkbox">
-                               
-                                    <label><input type="checkbox"مرا بخاطر بسپار /></label>
+                                    <label>مرا بخاطر بسپار</label>
+                                    <input name="isPersistent" id="isPersistent" data-val="true" value="true" type="checkbox" />
                                 </div>
                             </div>
                             <div class="col-md-12 col-lg-6 text-right-lg">
-                                <a class="forgot-password" href="#">فراموشی رمز؟</a>
+                             
+                                <label>  <a class="forgot-password" href="#">فراموشی رمز؟</a> </label>
                             </div>
                             <div class="col-md-6">
                                 <button class="btn btn-theme btn-block btn-theme-dark " type="submit">ورود</button>
