--- a/Endpoint.Site/Views/Shared/Components/Search/Search.cshtml
+++ b/Endpoint.Site/Views/Shared/Components/Search/Search.cshtml
@@ -47,12 +47,12 @@
     </head>
       <form asp-action="Index" asp-controller="Product" method="get" dir="ltr" >
     <div style="display:flex; float:left">
-    <select class="dropdown"  id="catId" name="catId" asp-items="@(new SelectList(Model,"Id","Name"))">   
-  <option value="@null">دسته بندی ها</option>
+        <select class=" dropdown-toggle selectpicker btn-default" id="catId" name="catId" asp-items="@(new SelectList(Model,"Id","Name"))">
+            <option value="@null">دسته بندی ها</option>
    </select>
  
-   <div class="search_bar">
-     <input class="input search_nav" type="search" name="searchKey" placeholder="جستجو..."/>       
+   <div class="header-search">
+     <input class="form-control" type="search" name="searchKey" placeholder="جستجو..."/>       
        <button type="submit"><i class="fa fa-search"></i></button>
    </div>
 </div>
