--- a/Endpoint.Site/Areas/Admin/Views/User/Index.cshtml
+++ b/Endpoint.Site/Areas/Admin/Views/User/Index.cshtml
@@ -141,8 +141,8 @@
             $.ajax({
                 contentType: 'application/x-www-form-urlencoded',
                 dataType: 'json',
-                method: "Post",
-                url: "Admin/User/Edit",
+                method: 'Post',
+                url: 'Admin/User/Edit',
                 data: postData,
                 success: function(data) {
                     if (data.isSuccess == true) {
