Ajax Url Post Fix-HomePage G1 Images

--- a/Endpoint.Site/Areas/Admin/Views/Role/Index.cshtml
+++ b/Endpoint.Site/Areas/Admin/Views/Role/Index.cshtml
@@ -63,7 +63,7 @@
                 contentType: 'application/x-www-form-urlencoded',
                 dataType: 'json',
                 method: "Post",
-                url: "Create",
+                url: "/Admin/Role/Create",
                 data: postData,
                 success: function (data) {
                     if (data.isSuccess == true) {
