--- a/Endpoint.Site/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Endpoint.Site/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -217,6 +217,23 @@
                             <a href="#" class="nav-link active">
                                 <i class="nav-icon fa fa-dashboard"></i>
                                 <p>
+                                    Roles
+                                    <i class="right fa fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="~/admin/role/" class="nav-link active">
+                                        <i class="fa fa-circle-o nav-icon"></i>
+                                        <p>Roles List</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item has-treeview">
+                            <a href="#" class="nav-link active">
+                                <i class="nav-icon fa fa-dashboard"></i>
+                                <p>
                                     دسته‌بندی ها
                                     <i class="right fa fa-angle-left"></i>
                                 </p>
