--- a/Endpoint.Site/Areas/Admin/Views/User/Index.cshtml
+++ b/Endpoint.Site/Areas/Admin/Views/User/Index.cshtml
@@ -94,7 +94,7 @@
                         contentType: 'application/x-www-form-urlencoded',
                         dataType: 'json',
                         type: "POST",
-                        url: "Admin/User/Delete",
+                        url: "/Admin/User/Delete",
                         data: postData,
                         success: function(data) {
                             if (data.isSuccess == true) {
@@ -142,7 +142,7 @@
                 contentType: 'application/x-www-form-urlencoded',
                 dataType: 'json',
                 method: 'Post',
-                url: 'Admin/User/Edit',
+                url: '/Admin/User/Edit',
                 data: postData,
                 success: function(data) {
                     if (data.isSuccess == true) {
