--- a/Endpoint.Site/Views/Home/Index.cshtml
+++ b/Endpoint.Site/Views/Home/Index.cshtml
@@ -229,6 +229,49 @@
                 <!-- tab 2 -->
                 <div class="tab-pane fade active in" id="tab-2">
                     <div class="row">
+                        @foreach (var item in Model.SiteImagesDto.Where(p=>p.ImageLocation==ImageLocation.G1).Take(4))
+                        {
+                            <div class="col-md-3 col-sm-6">
+                            <div class="thumbnail no-border no-padding">
+                                <div class="media">
+                                    <a class="media-link" data-gal="prettyPhoto" href="~/@item.Link">
+                                        <img src="~/@item.Src" alt="" />
+                                        <span class="icon-view"><strong><i class="fa fa-eye"></i></strong></span>
+                                    </a>
+                                </div>
+                                <div class="caption text-center">
+                                    <h4 class="caption-title"><a href="product-details.html">Standard Product Header</a></h4>
+                                    <div class="rating">
+                                        <span class="star"></span>
+                                        <!--
+                                        -->
+                                        <span class="star active"></span>
+                                        <!--
+                                        -->
+                                        <span class="star active"></span>
+                                        <!--
+                                        -->
+                                        <span class="star active"></span>
+                                        <!--
+                                        -->
+                                        <span class="star active"></span>
+                                    </div>
+                                    <div class="price"><ins>$400.00</ins> <del>$425.00</del></div>
+                                    <div class="buttons">
+                                        <a class="btn btn-theme btn-theme-transparent btn-wish-list" href="#"><i class="fa fa-heart"></i></a>
+                                        <!--
+                                        -->
+                                        <a class="btn btn-theme btn-theme-transparent btn-icon-left" href="#"><i class="fa fa-shopping-cart"></i>Add to Cart</a>
+                                        <!--
+                                        -->
+                                        <a class="btn btn-theme btn-theme-transparent btn-compare" href="#"><i class="fa fa-exchange"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        }
+                        
+                        @*
                         <div class="col-md-3 col-sm-6">
                             <div class="thumbnail no-border no-padding">
                                 <div class="media">
@@ -343,44 +386,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="thumbnail no-border no-padding">
-                                <div class="media">
-                                    <a class="media-link" data-gal="prettyPhoto" href="~/Template-Site/assets/img/preview/shop/product-1-big.jpg">
-                                        <img src="~/Template-Site/assets/img/preview/shop/product-1.jpg" alt="" />
-                                        <span class="icon-view"><strong><i class="fa fa-eye"></i></strong></span>
-                                    </a>
-                                </div>
-                                <div class="caption text-center">
-                                    <h4 class="caption-title"><a href="product-details.html">Standard Product Header</a></h4>
-                                    <div class="rating">
-                                        <span class="star"></span>
-                                        <!--
-                                        -->
-                                        <span class="star active"></span>
-                                        <!--
-                                        -->
-                                        <span class="star active"></span>
-                                        <!--
-                                        -->
-                                        <span class="star active"></span>
-                                        <!--
-                                        -->
-                                        <span class="star active"></span>
-                                    </div>
-                                    <div class="price"><ins>$400.00</ins> <del>$425.00</del></div>
-                                    <div class="buttons">
-                                        <a class="btn btn-theme btn-theme-transparent btn-wish-list" href="#"><i class="fa fa-heart"></i></a>
-                                        <!--
-                                        -->
-                                        <a class="btn btn-theme btn-theme-transparent btn-icon-left" href="#"><i class="fa fa-shopping-cart"></i>Add to Cart</a>
-                                        <!--
-                                        -->
-                                        <a class="btn btn-theme btn-theme-transparent btn-compare" href="#"><i class="fa fa-exchange"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        *@
                     </div>
                 </div>
 
