--- a/Endpoint.Site/Views/Home/Dashboard.cshtml
+++ b/Endpoint.Site/Views/Home/Dashboard.cshtml
@@ -25,6 +25,10 @@
                             <div class="col-md-12">
                                 <label asp-for="EmailConfirmed"></label>
                                 <div class="form-group"><input asp-for="EmailConfirmed" style="pointer-events:none"></div>
+                                @if (Model.EmailConfirmed == false)
+                                {
+                                    <a asp-action="SendConfirmationEmail" asp-controller="Authentication">click to send confirmation email</a>
+                                }
                             </div>
                             <div class="col-md-12">
                                 <label asp-for="PhoneNumber"></label>
