User password set to nullable - Added authentication with google - Modified AddUserService for external users

--- a/Endpoint.Site/Views/Authentication/Login.cshtml
+++ b/Endpoint.Site/Views/Authentication/Login.cshtml
@@ -19,7 +19,7 @@
                                 <span class="hello-text text-thin">به حساب خود خوش آمدید</span>
                             </div>
                             <div class="col-md-12 col-lg-6">
-                                <a class="btn btn-theme btn-block btn-icon-left facebook" href="#"><i class="fa fa-facebook"></i>ورود با فیسبوک</a>
+                                <a asp-action="ExternalLogin" asp-controller="Authentication" class="btn btn-theme btn-block btn-icon-left google"><i class="fa fa-facebook"></i>Login wth Google</a>
                             </div>
                             <div class="col-md-12 col-lg-6">
                                 <a class="btn btn-theme btn-block btn-icon-left twitter" href="#"><i class="fa fa-twitter"></i>ورود با توییتر</a>
