--- a/Endpoint.Site/Views/Authentication/Register.cshtml
+++ b/Endpoint.Site/Views/Authentication/Register.cshtml
@@ -17,13 +17,14 @@
                             <span class="hello-text text-thin">به حساب خود خوش آمدید</span>
                         </div>
                         <div class="col-md-12 col-lg-6">
-                            <a class="btn btn-theme btn-block btn-icon-left facebook" href="#"><i class="fa fa-facebook"></i>ورود با فیسبوک</a>
+                            <a asp-action="ExternalLogin" asp-controller="Authentication" class="btn btn-theme btn-block btn-icon-left google"><i class="fa fa-facebook"></i>Register wth Google</a>
                         </div>
                         <div class="col-md-12 col-lg-6">
                             <a class="btn btn-theme btn-block btn-icon-left twitter" href="#"><i class="fa fa-twitter"></i>ورود با توییتر</a>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"> </div>
                                 <span asp-validation-for="FullName" class="text-danger"> </span>
                                 <input class="form-control" id="fullname" name="fullname" type="text" placeholder="نام">
                             </div>
