--- a/Endpoint.Site/Views/Home/Index.cshtml
+++ b/Endpoint.Site/Views/Home/Index.cshtml
@@ -104,13 +104,13 @@
                 <ul id="tabs" class="nav nav-justified-off">
                     <!--
                     -->
-                    <li class=""><a href="#tab-1" data-toggle="tab">برجسته ها</a></li>
+                    <li class=""><a href="#tab-1" data-toggle="tab">Featured</a></li>
                     <!--
                     -->
-                    <li class="active"><a href="#tab-2" data-toggle="tab">جدیدترین ها</a></li>
+                    <li class="active"><a href="#tab-2" data-toggle="tab">Newest</a></li>
                     <!--
                     -->
-                    <li class=""><a href="#tab-3" data-toggle="tab">پروفروش ها</a></li>
+                    <li class=""><a href="#tab-3" data-toggle="tab">Top Sellers</a></li>
                 </ul>
             </div>
 
@@ -586,8 +586,8 @@
                     </div>
                     <div class="thumbnail no-border no-padding">
                         <div class="media">
-                            <a class="media-link" data-gal="prettyPhoto" href="assets/img/preview/shop/product-1-big.jpg">
-                                <img src="assets/img/preview/shop/top-rated-6.jpg" alt="" />
+                            <a class="media-link" data-gal="prettyPhoto" href="~/Template-Site/assets/img/preview/shop/product-1-big.jpg">
+                                <img src="~/Template-Site/assets/img/preview/shop/top-rated-6.jpg" alt="" />
                                 <span class="icon-view"><strong><i class="fa fa-eye"></i></strong></span>
                             </a>
                         </div>
@@ -622,8 +622,8 @@
                     </div>
                     <div class="thumbnail no-border no-padding">
                         <div class="media">
-                            <a class="media-link" data-gal="prettyPhoto" href="assets/img/preview/shop/product-1-big.jpg">
-                                <img src="assets/img/preview/shop/top-rated-1.jpg" alt="" />
+                            <a class="media-link" data-gal="prettyPhoto" href="~/Template-Site/assets/img/preview/shop/product-1-big.jpg">
+                                <img src="~/Template-Site/assets/img/preview/shop/top-rated-1.jpg" alt="" />
                                 <span class="icon-view"><strong><i class="fa fa-eye"></i></strong></span>
                             </a>
                         </div>
@@ -658,8 +658,8 @@
                     </div>
                     <div class="thumbnail no-border no-padding">
                         <div class="media">
-                            <a class="media-link" data-gal="prettyPhoto" href="assets/img/preview/shop/product-1-big.jpg">
-                                <img src="assets/img/preview/shop/top-rated-2.jpg" alt="" />
+                            <a class="media-link" data-gal="prettyPhoto" href="~/Template-Site/assets/img/preview/shop/product-1-big.jpg">
+                                <img src="~/Template-Site/assets/img/preview/shop/top-rated-2.jpg" alt="" />
                                 <span class="icon-view"><strong><i class="fa fa-eye"></i></strong></span>
                             </a>
                         </div>
