--- a/Endpoint.Site/Views/Authentication/Register.cshtml
+++ b/Endpoint.Site/Views/Authentication/Register.cshtml
@@ -10,56 +10,56 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-9">
-                <h3 class="block-title"><span>ورود</span></h3>
+                <h3 class="block-title"><span>Register</span></h3>
                 <form action="#" class="form-login" method="post">
                     <div class="row">
                         <div class="col-md-12 hello-text-wrap ">
-                            <span class="hello-text text-thin">به حساب خود خوش آمدید</span>
+                            <div asp-validation-summary="ModelOnly" class="text-danger"> </div>
                         </div>
                         <div class="col-md-12 col-lg-6">
-                            <a asp-action="ExternalLogin" asp-controller="Authentication" class="btn btn-theme btn-block btn-icon-left google"><i class="fa fa-facebook"></i>Register wth Google</a>
+                            <a asp-action="ExternalLogin" asp-controller="Authentication" class="btn btn-theme btn-block btn-icon-left "><i class=""></i>Register wtih Google</a>
                         </div>
                         <div class="col-md-12 col-lg-6">
-                            <a class="btn btn-theme btn-block btn-icon-left twitter" href="#"><i class="fa fa-twitter"></i>ورود با توییتر</a>
+                            <a class="btn btn-theme btn-block btn-icon-left twitter" href="#"><i class="fa fa-twitter"></i>Login With Twitter</a>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
-                                <div asp-validation-summary="ModelOnly" class="text-danger"> </div>
                                 <span asp-validation-for="FullName" class="text-danger"> </span>
-                                <input class="form-control" id="fullname" name="fullname" type="text" placeholder="نام">
+                                <input class="form-control" id="fullname" name="fullname" type="text" placeholder="Name">
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
                                 <span asp-validation-for="Email" class="text-danger"> </span>
-                                <input class="form-control" id="email" name="email" type="text" placeholder="ایمیل">
+                                <input class="form-control" id="email" name="email" type="text" placeholder="Email">
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
                                 <span asp-validation-for="Password" class="text-danger"> </span>
-                                <input class="form-control" id="password" name="password" type="password" placeholder="پسوورد">
+                                <input class="form-control" id="password" name="password" type="password" placeholder="Password">
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
                                 <span asp-validation-for="RePassword" class="text-danger"> </span>
-                                <input class="form-control" id="repassword" name="repassword" type="password" placeholder="تکرار پسوورد">
+                                <input class="form-control" id="repassword" name="repassword" type="password" placeholder="Repeat Password">
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
                                 <span asp-validation-for="PhoneNumber" class="text-danger"> </span>
-                                <input class="form-control" id="phonenumber" name="phonenumber" type="tel" placeholder="شماره تلفن">
+                                <input class="form-control" id="phonenumber" name="phonenumber" type="tel" placeholder="PhoneNumber">
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-6">
                             <div class="checkbox">
-                                <label><input type="checkbox">مرا بخاطر بسپار</label>
+                                <label>Remember Me</label>
+                                <input name="isPersistent" id="isPersistent" data-val="true" value="true" type="checkbox"/>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <button type="submit" class="btn btn-theme btn-block btn-theme-dark">بت نام</button>
+                            <button type="submit" class="btn btn-theme btn-block btn-theme-dark">Register</button>
                         </div>
                     </div>
                 </form>
